--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ language: python
 
 matrix:
   include:
-    - python: 3.5
     - python: 3.6
+    - python: 3.7
 
 before_cache:
   - rm -rf $HOME/.cache/pip/log
@@ -19,7 +19,9 @@ install:
   - pip install --upgrade flake8
 
 script:
-  - flake8 --max-line-length 160
+  - flake8
+  - pip install --upgrade ./
+  - aws-acl-helper --help
 
 notifications:
   email: false
